# funnybox

funnybox/: pyproject.toml
funnybox/funnybox/: __main__.py  server.py
funnybox/funnybox/cloudwords/: cloudwords.py
