[tool.poetry]
name = "funnybox"
version = "0.1.0"
description = "some funny api"
authors = ["Mingguang Shao"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
wordcloud = "^1.8.1"
numpy = "^1.6.1"
Pillow = "^9.1.1"
matplotlib = "^3.5.2"
sanic = "^22.3.2"
Sanic-Cors = "^2.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
funnybox = "funnybox.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
